jEdit 4.5 version history
       (changes since jEdit 4.4.2)
:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Alan Ezust, cy6erGn0m,
Bad Sector, jclopes, Dale Anson, Anshal Shukla, Ryan Mott, Damien Radtke,
Matthew Gilbert, Dennis Hotson, Kevin Hunter, encorejane, nherzing, Jeremy,
Evan Wright, Shlomy Reinstein, glen117, kog13, Marcelo Vanzin and
Eric Le Lay for contributing to this release.

{{{ Bug fixes

- Fixed jEdit starting when max heap size is too low to load Killring
  (#1827853) (Matthieu Casanova)

- Fix Checkbox Menu not working on OSX (#3155813 patch #3159277) (Evan Wright)

- Fixed a class loading issue when no GUI (SplashScreen or TrayIcon) was shown
  on startup. The effects were visible if the VoxSpell plugin was installed
  and the Markdown plugin was tried to be used. (Björn "Vampire" Kautler)

- When changing the Look and Feel on-the-fly, already shown JTrees with
  explicitly set TreeCellRenderers were rendered wrongly, now they are robust
  in regards to Look and Feel changes. (Björn "Vampire" Kautler)

- Fixed plugin install panel : when the selected plugin had dependencies that
  were not visible because of the filtered view, those dependencies were not
  installed. Now the install panel will always show selected plugins so you can
  know what will be installed (Matthieu Casanova)

- The selectionLength status bar widget is now updated when jEdit starts, and
  says 0 instead of nothing if there is no selection (Matthieu Casanova)

- Fixed the file properties dialog when the VFS has no rename capability
  (Matthieu Casanova)

- Latex string literal fixed : when starting with `` the String literal can
  now end with " or '' (#3152515 - patch #3162735 Evan Wright)

- When jEdit is unable to autosave jEdit now logs a warning, but doesn't
  pop an error dialog every 30 seconds (#3154842 - Matthieu Casanova)

- Made jedit.exe to find JDK, so that jEdit runs only with JDK (without